<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tom.project1.MainActivity"
    android:background="@color/white"
    >

    <TextView

        android:gravity="center"
        android:id="@+id/txttt"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="122dp"
        android:text="@string/txtInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.515" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSm"
        android:id="@+id/radioGroup"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/radioLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioLight"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioDark" />

    </RadioGroup>

    <Button
        android:textColor="@color/white"
        android:background="@color/sm"
        android:id="@+id/buttonSm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonSm"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:textColor="@color/white"

        android:id="@+id/buttonX"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/buttonX"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/buttonSrc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonSrc"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSm"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ImageView
        android:id="@+id/imageNlu"
        android:layout_width="172dp"
        android:layout_height="131dp"
        app:srcCompat="@drawable/nlu"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txttt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:contentDescription="@string/nlu"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
