<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tom.project1.NewActivity"
    android:id="@+id/cslayout"
    >





    <TextView
        android:gravity="center|center_horizontal"
        android:id="@+id/textNew"
        android:layout_width="368dp"
        android:layout_height="78dp"
        android:text="@string/txtNew"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp" />

    <Button

        android:id="@+id/buttonPush"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginBottom="2dp"

        android:text="@string/buttonPush"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textNew"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="176dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginBottom="2dp"

        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textNew"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toLeftOf="@+id/buttonPush"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp" />

    <Button
        android:onClick="getString"
        android:id="@+id/buttonGetStr"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:text="@string/buttongetstr"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/textNew"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonshowok"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:text="Show Ok"
        android:layout_marginTop="133dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetStr"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="show"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonshowcancle"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="Show Cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonshowok"
        android:onClick="show"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:onClick="getInt"
        android:id="@+id/buttongetint"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:text="@string/tinh"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonshowok"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetStr"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>
