<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tom.project1.ChildActivity"
    android:background="@color/white"
    android:backgroundTint="@color/white"

    >

    <TextView
        android:textColor="@color/dark"
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_alignBaseline="@+id/edit1"
        android:layout_alignBottom="@+id/edit1"
        android:layout_alignParentLeft="true"
        android:text="@string/enterms"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:textColor="@color/dark"
        android:id="@+id/edit1"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toRightOf="@+id/textView"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:background="@color/colorAccent"
        android:id="@+id/button1"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_below="@+id/edit1"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonSm"
        android:layout_marginLeft="113dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintVertical_bias="0.028"
        android:layout_marginStart="75dp" />
    <Button
        android:id="@+id/buttoncancel"
        android:layout_width="88dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintVertical_bias="0.028"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
